src/test/deca/context/invalid/self/comparaisonString.deca
{
    if("hello">"world"){
        println("oups");
    }else{
        println("ok");
    }

}